[package]
name = "lab1"
version = "0.1.0"
authors = ["Zhixing Zhang <me@neoto.xin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "master" }
rand = "0.8.3"

[dependencies.bevy_fly_camera]
git = "https://github.com/mcpar-land/bevy_fly_camera"
branch = "post-0.4"
